@@ -2095,6 +2095,7 @@ Each row contains links to the first and second redirect, as well as the target 
 'newpages'                        => 'New pages',
 'newpages-summary'                => '', # do not translate or duplicate this message to other languages
 'newpages-username'               => 'Username:',
+'newpages-showhideredirs'         => '$1 redirects',
 'ancientpages'                    => 'Oldest pages',
 'ancientpages-summary'            => '', # do not translate or duplicate this message to other languages
 'move'                            => 'Move',
