@@ -188,6 +188,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 13710) Allow to force "watch this" checkbox via URL using para "watchthis"
 * (bug 15125) Add Public Domain to default options when installing. Patch by Nathan Larson.
 * Set a special temporary directory for ImageMagick with $wgImageMagickTempDir
+* (bug 16113) Show/hide for redirects in Special:NewPages
 
 === Bug fixes in 1.14 ===
 
